fix footer overlapping into carousel

--- a/app/Popular.module.css
+++ b/app/Popular.module.css
@@ -1,7 +1,5 @@
 .container {
-  position: relative;
-  top: 20%;
-  transform: translateY(-20%);
+  padding: 75px 0;
 }
 
 .posters {
@@ -33,7 +31,6 @@
 
 @media (max-width: 735px) {
   .container {
-    top: 10%;
-    transform: translateY(-10%);
+    padding: 16px;
   }
 }
